--- a/app/src/main/res/layout/fragment_akun.xml
+++ b/app/src/main/res/layout/fragment_akun.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".activity.ui.notifications.NotificationsFragment">
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/text_notifications"
@@ -15,6 +14,7 @@
         android:layout_marginEnd="8dp"
         android:textAlignment="center"
         android:textSize="20sp"
+        android:text="Akun"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
