--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,12 +7,12 @@
         android:title="@string/title_home" />
 
     <item
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigation_keranjang"
         android:icon="@drawable/ic_dashboard_black_24dp"
         android:title="@string/title_keranjang" />
 
     <item
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_akun"
         android:icon="@drawable/ic_notifications_black_24dp"
         android:title="@string/title_akun" />
 
