--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent">
 
     <RelativeLayout
-        android:background="@color/purple_700"
+        android:background="@color/head"
         android:padding="8dp"
         android:orientation="horizontal"
         android:layout_width="match_parent"
@@ -30,7 +30,7 @@
                 android:layout_marginTop="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_search_24"/>
+                android:src="@drawable/ic_orange_search_24"/>
             <TextView
                 android:layout_marginTop="5dp"
                 android:textColor="#FFC107"
@@ -50,34 +50,99 @@
             android:layout_centerVertical="true"/>
     </RelativeLayout>
 
-<androidx.viewpager.widget.ViewPager
-    android:id="@+id/vp_slider"
-    android:layout_width="match_parent"
-    android:layout_height="190dp"
-    tools:ignore="MissingConstraints" />
-
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_marginTop="15dp"
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Produk Terbaru !!!"
-            android:layout_marginHorizontal="10dp"
-            android:layout_marginBottom="10dp"
-            android:textStyle="bold"
-            android:textSize="17dp"
-            android:textColor="@color/orange"/>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_produk"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_marginBottom="15dp"
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent">
+
+            <androidx.viewpager.widget.ViewPager
+                android:id="@+id/vp_slider"
+                android:layout_width="match_parent"
+                android:layout_height="190dp"
+                tools:ignore="MissingConstraints" />
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_marginTop="15dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
 
-    </LinearLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Produk Terbaru !!!"
+                    android:layout_marginHorizontal="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:textStyle="bold"
+                    android:textSize="17dp"
+                    android:textColor="@color/orange"/>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_produk"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_marginTop="15dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Produk Terlaris !!!"
+                    android:layout_marginHorizontal="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:textStyle="bold"
+                    android:textSize="17dp"
+                    android:textColor="@color/orange"/>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_produkTerlaris"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_marginTop="15dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Produk Elektronik !!!"
+                    android:layout_marginHorizontal="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:textStyle="bold"
+                    android:textSize="17dp"
+                    android:textColor="@color/orange"/>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_produkElektronik"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </androidx.core.widget.NestedScrollView>
+
+
 </LinearLayout>
