--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="orange">#FF5722</color>
     <color name="hijau">#4CAF50</color>
     <color name="head">#001342</color>
+    <color name="blue">#0B30A2</color>
 </resources>
