--- a/app/src/main/res/layout/activity_detail_produk.xml
+++ b/app/src/main/res/layout/activity_detail_produk.xml
@@ -9,7 +9,7 @@
     tools:context=".activity.DetailProdukActivity">
 
     <include
-        layout="@layout/toolbar"
+        layout="@layout/custom_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
