--- a/app/src/main/res/layout/activity_detail_produk.xml
+++ b/app/src/main/res/layout/activity_detail_produk.xml
@@ -291,6 +291,7 @@
             </RelativeLayout>
 
             <RelativeLayout
+                android:id="@+id/btn_beli"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="15dp"
