--- a/app/src/main/res/layout/item_produk.xml
+++ b/app/src/main/res/layout/item_produk.xml
@@ -34,6 +34,16 @@
             android:textStyle="bold"
             android:textSize="20dp"/>
 
+<!--        <TextView-->
+<!--            android:id="@+id/tv_hargaAsli"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginTop="5dp"-->
+<!--            android:layout_marginHorizontal="5dp"-->
+<!--            android:textColor="#8F8F8F"-->
+<!--            android:text="Rp.0 "-->
+<!--            android:textSize="18dp"/>-->
+
         <TextView
             android:id="@+id/tv_harga"
             android:layout_width="wrap_content"
